set font family, added spacing to match design

--- a/styles.css
+++ b/styles.css
@@ -9,17 +9,21 @@ body {
   max-width: 635px;
   margin: auto;
   background-color: #E6EFF5;
+  font-family: Karla, sans-serif;
 }
 
 main {
   max-width: 311px;
   margin: auto;
+  padding: 28px 24px;
   background-color: #fff;
 }
 
 /* mobile-first styling */
-/* header */
 
+header h1 {
+
+}
 
 /* Attribution styling */
 .attribution { font-size: 11px; text-align: center; }
