--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
 main {
   max-width: 311px;
   margin: auto;
-  padding: 28px 24px;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 15px 30px 0 rgba(0, 81, 171, 0.15);
@@ -24,18 +23,18 @@ main {
 
 /* mobile-first styling */
 /* header */
-header {
-  margin-bottom: 32px;
+header div {
+  padding: 28px 24px 32px 24px;
 }
 
-header h1 {
+header div h1 {
   font-weight: 700;
   font-size: 20px;
   color: #2ab3b1;
   margin-bottom: 24px;
 }
 
-header h2 {
+header div h2 {
   font-weight: 700;
   font-size: 15px;
   color: #c0df33;
@@ -43,10 +42,87 @@ header h2 {
   margin-bottom: 16px;
 }
 
-header p {
+header div p {
   font-size: 14px;
   color: #9aa7be;
   line-height: 1.857em;
+}
+
+/* section */
+section {
+  background-color: #2ab3b1;
+}
+
+section div {
+  padding: 24px;
+}
+
+section div h3 {
+  font-weight: 700;
+  font-size: 18px;
+  color: #fff;
+}
+
+section div h4 {
+  line-height: 1.625em;
+  font-weight: 700;
+  font-size: 32px;
+  color: #fff;
+}
+
+section div h4 span {
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  opacity: 50%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+section div p {
+  font-size: 16px;
+  line-height: 1.625em;
+  color: #fff;
+  padding-bottom: 26px;
+}
+
+section div button {
+  color: #fff;
+  background-color: #c0df33;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px 0px rgba(0, 0, 0, 0.1);
+  width: 263px;
+  height: 48px; 
+}
+
+/* aside */
+aside {
+  background-color: #2ab3b1;
+  opacity: 85%;
+}
+
+aside div {
+  padding: 24px;
+}
+
+aside div h3 {
+  font-weight: 700;
+  font-size: 18px;
+  color: #fff;
+  padding-bottom: 17px;
+}
+
+aside div ul {
+  list-style: none;
+  line-height: 20px;
+
+}
+
+aside div ul li {
+  font-size: 14px;
+  color: #fff;
+  opacity: 75%;
 }
 
 /* Attribution styling */
