--- a/styles.css
+++ b/styles.css
@@ -1,137 +1,16 @@
 /* Reset */
 * {
-  margin: 0;
+  margin: 0px;
   padding: 0;
 }
 
-/* body & main content styling */
-body {
-  max-width: 635px;
-  margin: auto;
-  background-color: #E6EFF5;
-  font-family: Karla, sans-serif;
-  font-size: 100%;
-}
-
-main {
-  max-width: 311px;
-  margin: auto;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 15px 30px 0 rgba(0, 81, 171, 0.15);
-}
-
-/* mobile-first styling */
-/* header */
-header div {
-  padding: 28px 24px 32px 24px;
-}
-
-header div h1 {
-  font-weight: 700;
-  font-size: 20px;
-  color: #2ab3b1;
-  margin-bottom: 24px;
-}
-
-header div h2 {
-  font-weight: 700;
-  font-size: 15px;
-  color: #c0df33;
-  line-height: 1.33em;
-  margin-bottom: 16px;
-}
-
-header div p {
-  font-size: 14px;
-  color: #9aa7be;
-  line-height: 1.857em;
-}
-
-/* section */
-section {
-  background-color: #2ab3b1;
-}
-
-section div {
-  padding: 24px;
-}
-
-section div h3 {
-  font-weight: 700;
-  font-size: 18px;
-  color: #fff;
-}
-
-section div h4 {
-  line-height: 1.625em;
-  font-weight: 700;
-  font-size: 32px;
-  color: #fff;
-}
-
-section div h4 span {
-  font-size: 16px;
-  font-weight: 400;
-  color: #fff;
-  opacity: 50%;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-section div p {
-  font-size: 16px;
-  line-height: 1.625em;
-  color: #fff;
-  padding-bottom: 26px;
-}
-
-section div button {
-  color: #fff;
-  background-color: #c0df33;
-  border: none;
-  border-radius: 5px;
-  box-shadow: 0 10px 10px 0px rgba(0, 0, 0, 0.1);
-  width: 263px;
-  height: 48px; 
-}
-
-/* aside */
-aside {
-  background-color: #2ab3b1;
-  opacity: 85%;
-}
-
-aside div {
-  padding: 24px;
-}
-
-aside div h3 {
-  font-weight: 700;
-  font-size: 18px;
-  color: #fff;
-  padding-bottom: 17px;
-}
-
-aside div ul {
-  list-style: none;
-  line-height: 20px;
-
-}
-
-aside div ul li {
-  font-size: 14px;
-  color: #fff;
-  opacity: 75%;
-}
-
 /* Attribution styling */
-.attribution { 
-  font-size: 11px; 
-  text-align: center; 
+.attribution {
+  font-size: 11px;
+  text-align: center;
   margin-top: 16px;
 }
 
-.attribution a { 
-  color: hsl(228, 45%, 44%); 
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
