--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* Reset */
 * {
-  margin: 0px;
+  margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* universal styling */
@@ -14,13 +15,20 @@ body {
 main {
   max-width: 635px;
   width: 44.0972%;
-  margin: auto;
+  margin: 0 auto;
+}
+
+/* flex container */
+#flex_container {
+  display: flex;
+  width: 100%;
 }
 
 /* header styles */
 header {
   background-color: #fff;
   padding: 1.667em;
+  width: 100%;
 }
 
 header h1 {
@@ -47,6 +55,7 @@ header p {
 section {
   background-color: rgb(42, 179, 177);
   padding: 1.667em;
+  flex-basis: 50%;
 }
 
 section h2 {
@@ -93,6 +102,7 @@ section button {
 aside {
   background-color: rgba(42, 179, 177, 0.85);
   padding: 1.667em;
+  flex-basis: 50%;
 }
 
 aside h4 {
