--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,14 @@ main {
   margin: 0 auto;
 }
 
-/* flex container */
 #flex_container {
   display: flex;
   width: 100%;
+}
+
+main,
+#flex_container {
+  min-width: 311px;
 }
 
 /* header styles */
@@ -128,8 +132,8 @@ aside ul li a {
 
 /* mobile media query styles */
 @media only screen and (max-width: 375px) {
-  main {
-    width: 82.933%;
+  #flex_container {
+    display: block;
   }
 }
 
