--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: 100%;
+  font-family: "Karla", sans-serif;
 }
 
 /* Main content container styling
@@ -23,6 +25,7 @@ main {
   width: 82.933%;
   max-width: 635px;
   box-shadow: rgba(0, 81, 171, 0.15) 0 15px 30px 0;
+  font-size: 0.625em; /*sets font size to 10px for easy conversions*/
 }
 
 /* Shared styling for main content
@@ -43,12 +46,22 @@ header {
   padding-bottom: 32px;
 }
 header h1 {
+  font-size: 2em;
+  font-weight: 700;
+  color: #2ab3b1;
 }
 header h3 {
   padding-top: 24px;
+  font-size: 1.5em;
+  font-weight: 700;
+  line-height: 1.333em;
+  color: #c0df33;
 }
 header p {
   padding-top: 16px;
+  font-size: 1.4em;
+  line-height: 1.857;
+  color: #9aa7be;
 }
 
 /* Signup section styling
@@ -59,16 +72,47 @@ section {
 }
 section h2 {
   padding-top: 24px;
+  font-size: 1.8em;
+  font-weight: 700;
+  color: #fff;
 }
-section h3 {
+#subscription_price {
   padding-top: 17px;
 }
-section p {
+#subscription_price > * {
+  vertical-align: middle;
+}
+#subscription_price h3 {
+  font-size: 3.2em;
+  font-weight: 700px;
+  color: #fff;
+  display: inline-block;
+}
+#subscription_price p {
+  padding-left: 12px;
+  font-size: 1.6em;
+  font-weight: 400;
+  line-height: 1.625em;
+  color: #fff;
+  opacity: 50%;
+  display: inline-block;
+}
+section > p {
   padding-top: 4px;
   padding-bottom: 26px;
+  font-size: 1.6em;
+  line-height: 1.625em;
+  color: #fff;
 }
 section button {
   padding: 15px 102px 14px 102px;
+  font-size: 1.6em;
+  font-weight: 700;
+  color: white;
+  background-color: #c0df33;
+  border: none;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 10px 10px 0;
 }
 
 /* Aside 'why us' styling
@@ -80,12 +124,21 @@ aside {
   padding-top: 24px;
   padding-bottom: 24px;
 }
+aside h3 {
+  font-size: 1.8em;
+  font-weight: 700;
+  color: #fff;
+}
 aside ul {
   list-style: none;
   padding-top: 17px;
 }
 aside ul li a {
   text-decoration: none;
+  font-size: 1.4em;
+  line-height: 1.429em;
+  color: #fff;
+  opacity: 75%;
 }
 
 /* Attribution styling
